--- a/view/frontend/templates/component/product_finder.phtml
+++ b/view/frontend/templates/component/product_finder.phtml
@@ -12,11 +12,16 @@ $componentClasses = $block->getSkipSpacing() ? ' cs-product-finder--skip-spacing
 $componentClasses .= ' ' . $block->getVar('product_finder/additional_css_classes');
 
 $jsSettings = json_encode($block->getVar('product_finder/js') ?: '{}');
+
+$containerClasses = $block->getContainerMix();
+if (isset($componentConfiguration['cc_css_classes'])):
+    $containerClasses .= ' ' . $componentConfiguration['cc_css_classes'];
+endif;
 ?>
 
 <?= $block->getCssOnce('css/product-finder.css'); ?>
 
-<div class="cs-container cs-container--product-finder<?= $visibility ? ' ' .$visibility : ''; ?>">
+<div class="cs-container cs-container--product-finder<?= $containerClasses ?><?= $visibility ? ' ' .$visibility : ''; ?>">
     <div class="cs-container__inner">
         <div class="cs-product-finder<?= $componentClasses ?>" data-mage-init='{ "ccProductFinder": <?= $jsSettings ?> }'>
         <?php foreach($steps as $step): ?>
