[DG-821] Add missing alts

--- a/view/frontend/templates/component/image_teaser/elements/nav-next.phtml
+++ b/view/frontend/templates/component/image_teaser/elements/nav-next.phtml
@@ -7,6 +7,7 @@ $imageTeaserData = $block->getImageTeaserData();
         ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
         ->setIconUrl($block->getIcon())
         ->setCssClass('cs-image-teaser__nav-icon')
+        ->setAltText(__('Next'))
         ->setInlined(true)
         ->setLazyLoaded(false)
         ->toHtml(); 
